<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="24dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ing_tomato"
            android:inputType="text"
            android:textAllCaps="false"
            android:textStyle="italic" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="?attr/dividerHorizontal"
                android:dividerPadding="8dp"
                android:showDividers="middle">

                <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/amount_base"
                    android:textAlignment="center" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:layout_weight="1"
                    android:text="@string/units"
                    android:textAlignment="center" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="?attr/dividerHorizontal"
                android:dividerPadding="8dp"
                android:showDividers="middle">

                <EditText
                    android:id="@+id/tv_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:hint="1.0"
                    android:inputType="numberDecimal"
                    android:textAlignment="center" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/sp_quant"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:foregroundGravity="center_vertical"
                        android:textAlignment="center" />

                    <Spinner
                        android:id="@+id/sp_unit_type"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:foregroundGravity="center_vertical"
                        android:textAlignment="center" />
                </LinearLayout>

            </TableRow>

        </TableLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>