<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- איקס סגירה -->
    <ImageButton
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_margin="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="Close"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_recipe"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/scvRecipe"
        app:layout_constraintEnd_toStartOf="@+id/btn_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scvRecipe"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_close">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:paddingBottom="80dp"
            android:clipToPadding="false">

            <!-- שם מתכון -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <!-- שורה: שם מתכון + תמונה (גדולה) + 2 כפתורים -->

            <LinearLayout
                android:id="@+id/row_recipe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="top">

                <EditText
                    android:id="@+id/et_recipe_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Enter recipe name"
                    android:inputType="textPersonName" />

                <!-- עמודה ימנית: תמונה + כפתורים -->
            </LinearLayout>

            <!-- Ingredients -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Image" />

            <FrameLayout
                android:id="@+id/layout_recipe_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_recipe_photo"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:background="@android:color/darker_gray"
                    android:contentDescription="Recipe photo"
                    android:padding="6dp"
                    android:scaleType="centerCrop" />

                <!-- שני כפתורים -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp"
                    android:alpha=".5"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btn_remove_img"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="6dp"
                        android:src="@android:drawable/ic_menu_close_clear_cancel"
                        android:textAllCaps="false"
                        android:textSize="12sp"
                        android:visibility="gone"
                        app:tint="@color/design_default_color_error"
                        tools:visibility="visible" />

                    <ImageButton
                        android:id="@+id/btn_camera"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="6dp"
                        android:src="@android:drawable/ic_menu_camera"
                        android:textAllCaps="false"
                        android:textSize="12sp" />

                    <ImageButton
                        android:id="@+id/btn_gallery"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="6dp"
                        android:layout_weight="1"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="6dp"
                        android:src="@android:drawable/ic_menu_gallery"
                        android:textAllCaps="false"
                        android:textSize="12sp" />
                </LinearLayout>

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/ingredients"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                tools:itemCount="2"
                tools:listitem="@layout/item_kitchen_item_compact" />

            <Button
                android:id="@+id/btn_add_ingredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/add_ingredient"
                android:textAllCaps="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/instructions"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_instructions"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="top"
                android:hint="Write preparation steps..."
                android:inputType="textMultiLine" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_save_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/save"
        app:srcCompat="@android:drawable/ic_menu_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
